# outrigger

./: .Rbuildignore  .gitignore  CLAUDE.md  DESCRIPTION  GITHUB_SETUP.md  LICENSE  NAMESPACE  OPTIMIZATION_PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config_example.R  outrigger_rotation_analyzer.R  requirements.txt
.claude/: settings.json  settings.local.json
.tldr/: languages.json
.tldr/cache/: call_graph.json
R/: analyze_scenario.R  outrigger-package.R  plotting.R  print.R  recommendations.R  run_scenarios.R
man/: analyze_scenario.Rd  default_scenarios.Rd  get_recommendations.Rd  outrigger-package.Rd  plot_switching.Rd  plot_workload.Rd  print.outrigger_results.Rd  run_scenarios.Rd  summary.outrigger_results.Rd
outrigger_opt/: app.py  desafio60k2025.html  desafio60k2025.py  desafio60k2025.qmd  example.py  pyproject.toml
outrigger_opt/outrigger_opt/: __init__.py  fatigue.py  fatigue_improved.py  meta.py  model.py  utils.py
outrigger_opt/outrigger_opt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/: .~lock.rotacao_oc6.xlsx#  README.md  app.py  caveiras.csv  crew8.csv  defaults_crew.csv  desafio60k2025.html  desafio60k2025.py  desafio60k2025.qmd  desafio60k2025.quarto_ipynb  example.py  pyproject.toml  rotacao_oc6.xlsx
python/outrigger_opt/: fatigue.py  meta.py  model.py  utils.py
tests/: testthat.R
tests/testthat/: test-analyze_scenario.R  test-plotting.R  test-print.R  test-recommendations.R  test-run_scenarios.R
