[project]
name = "outrigger_opt"
version = "0.1.0"
description = "OC6 crew rotation optimizer with fatigue-aware MILP using PuLP"
authors = [{name = "Your Name"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pulp>=2.8",
    "pandas>=2.0",
    "numpy>=1.23",
    "streamlit>=1.28"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["outrigger_opt*"]
